--- a/package.json
+++ b/package.json
@@ -11,14 +11,25 @@
   "engines": {
     "node": "~0.6.1"
   },
+  "start": "supervisor -w node_modules,config,app/resources,server.coffee -e 'coffee|js|eco|json' server.coffee",
   "filename": "documentup.min.js",
-  "dependencies": {},
+  "dependencies": {
+    "express":                       "2.5.1",
+    "stylus":                        "~0.19.2",
+    "nib":                           "~0.3.0",
+    "request":                       "2.2.0",
+    "coffee-script":                 "1.1.3",
+    "sugar":                         "1.2.0",
+    "eco":                           "1.1.0-rc-3",
+    "connect-assetmanager":          "0.0.24",
+    "connect-assetmanager-handlers": "0.0.17",
+    "marked":                        "0.1.7"
+  },
   "devDependencies": {
-    "coffee-script": "~1.1.0",
-    "stylus":        "0.22.6",
-    "nib":           "0.3.2",
-    "uglify-js":     "1.2.5",
-    "ender":         "0.8.3",
-    "async":         "0.1.15"
+    "uglify-js":                     "1.2.5",
+    "ender":                         "0.8.3",
+    "async":                         "0.1.15",
+    "growl":                         "~1.2.0",
+    "supervisor":                    "~0.2.0"
   }
 }
