--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": "~0.6.1"
   },
-  "start": "supervisor -w node_modules,config,app/resources,server.coffee -e 'coffee|js|eco|json' server.coffee",
+  "start": "coffee server.coffee",
   "filename": "documentup.min.js",
   "dependencies": {
     "express":                       "2.5.1",
@@ -21,8 +21,6 @@
     "coffee-script":                 "1.1.3",
     "sugar":                         "1.2.0",
     "eco":                           "1.1.0-rc-3",
-    "connect-assetmanager":          "0.0.24",
-    "connect-assetmanager-handlers": "0.0.17",
     "marked":                        "0.1.7"
   },
   "devDependencies": {
