--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
   "start": "coffee server.coffee",
   "filename": "documentup.min.js",
   "dependencies": {
-    "express":                       "2.5.1",
-    "stylus":                        "~0.19.2",
-    "nib":                           "~0.3.0",
-    "request":                       "2.2.0",
-    "coffee-script":                 "1.1.3",
-    "sugar":                         "1.2.0",
-    "eco":                           "1.1.0-rc-3",
-    "marked":                        "0.1.7"
+    "express":       "2.5.1",
+    "stylus":        "~0.19.2",
+    "nib":           "~0.3.0",
+    "request":       "2.2.0",
+    "coffee-script": "1.1.3",
+    "sugar":         "1.2.0",
+    "eco":           "1.1.0-rc-3",
+    "marked":        "0.1.7"
   },
   "devDependencies": {
-    "uglify-js":                     "1.2.5",
-    "ender":                         "0.8.3",
-    "async":                         "0.1.15",
-    "growl":                         "~1.2.0",
-    "supervisor":                    "~0.2.0"
+    "uglify-js":     "1.2.5",
+    "ender":         "0.8.3",
+    "async":         "0.1.15",
+    "growl":         "~1.2.0"
   }
 }
