--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": "~0.6.8"
   },
-  "start": "coffee server.coffee",
+  //"start": "coffee server.coffee",
   "filename": "documentup.min.js",
   "dependencies": {
     "express":       "2.5.1",
