Trying a different deploy strategy

--- a/deploy.conf
+++ b/deploy.conf
@@ -4,4 +4,4 @@ host ec2-23-21-199-63.compute-1.amazonaws.com
 repo git@github.com:jeromegn/DocumentUp.git
 path /var/www/documentup.com
 ref origin/master
-post-deploy /var/www/documentup.com/scripts/post-deploy.sh
+post-deploy ./scripts/post-deploy.sh
