much simplified gh-pages implementation

--- a/deploy.conf
+++ b/deploy.conf
@@ -1,6 +1,6 @@
 [production]
 user ubuntu
-host ec2-23-21-199-63.compute-1.amazonaws.com
+host documentup.com
 repo git@github.com:jeromegn/DocumentUp.git
 path /var/www/documentup.com
 ref origin/master
