--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": "~0.6.8"
   },
   "scripts": {
-    "start": "coffee server.coffee"
+    "start": "supervisor server.coffee",
+    "test" : "mocha -R spec"
   },
   "filename": "documentup.min.js",
   "dependencies": {
@@ -23,10 +24,17 @@
     "coffee-script": "1.2.0",
     "sugar":         "1.2.0",
     "eco":           "1.1.0-rc-3",
-    "marked":        "0.1.7"
+    "marked":        "~0.2.3",
+    "async":         "~0.1.18",
+    "redis":         "~0.7.1"
   },
   "devDependencies": {
     "uglify-js":     "1.2.5",
-    "growl":         "~1.2.0"
+    "growl":         "~1.2.0",
+    "mocha":         "~1.0.0",
+    "replay":        "~1.3.1",
+    "zombie":        "~0.12.15",
+    "rimraf":        "~2.0.1",
+    "supervisor":    "~0.3.0"
   }
 }
