This is the biggest commit ever. Sorry about that. Refactor

--- a/config/default.config
+++ b/config/default.config
@@ -9,3 +9,7 @@ redis:
   namespace:  "docup"
   hostname:   "localhost"
   port:       6379
+
+github:
+  client_id:     process.env.GITHUB_CLIENT_ID
+  client_secret: process.env.GITHUB_CLIENT_SECRET
