--- a/config/test.config
+++ b/config/test.config
@@ -1,5 +1,7 @@
 #!coffee
 
+base_uri: "http://localhost:3003"
+
 # Specify namespace prefix, hostname and port for Redis server.
 redis:
   namespace:  "docup-test"
