--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "node": "~0.6.8"
   },
   "scripts": {
-    "start": "supervisor server.coffee",
-    "test" : "mocha -R spec"
+    "start": "supervisor -w app/resources,app/models,lib,config,server.coffee server.coffee",
+    "test" : "mocha"
   },
   "filename": "documentup.min.js",
   "dependencies": {
@@ -26,12 +26,16 @@
     "eco":           "1.1.0-rc-3",
     "marked":        "~0.2.3",
     "async":         "~0.1.18",
-    "redis":         "~0.7.1"
+    "redis":         "~0.7.1",
+    "connect-redis": "~1.4.0",
+    "qs":            "~0.5.0",
+    "winston":       "~0.6.1"
   },
   "devDependencies": {
     "uglify-js":     "1.2.5",
     "growl":         "~1.2.0",
     "mocha":         "~1.0.0",
+    "chai":          "~1.1.0",
     "replay":        "~1.5.2",
     "zombie":        "~1.1.4",
     "rimraf":        "~2.0.1",
