Put back master in there for the deployment

--- a/deploy.conf
+++ b/deploy.conf
@@ -3,5 +3,5 @@ user ubuntu
 host documentup.com
 repo git@github.com:jeromegn/DocumentUp.git
 path /var/www/documentup.com
-ref origin/private
+ref origin/master
 post-deploy ./scripts/post-deploy.sh
