Added pre deploy script

--- a/deploy.conf
+++ b/deploy.conf
@@ -4,4 +4,5 @@ host documentup.com
 repo git@github.com:jeromegn/DocumentUp.git
 path /var/www/documentup.com
 ref origin/master
-post-deploy ./scripts/post-deploy.sh
+pre-deploy ./scripts/pre_deploy.sh
+post-deploy ./scripts/post_deploy.sh
