--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
   },
   "filename": "documentup.min.js",
   "dependencies": {
-    "express":       "2.5.1",
-    "stylus":        "~0.19.2",
-    "nib":           "~0.3.0",
-    "request":       "~2.9.153",
-    "coffee-script": "1.2.0",
-    "sugar":         "1.2.0",
-    "eco":           "1.1.0-rc-3",
-    "marked":        "~0.2.3",
-    "async":         "~0.1.18",
-    "redis":         "~0.7.1",
-    "connect-redis": "~1.4.0",
-    "qs":            "~0.5.0",
-    "winston":       "~0.6.1"
+    "express":        "2.5.1",
+    "stylus":         "~0.19.2",
+    "nib":            "~0.3.0",
+    "request":        "~2.9.153",
+    "coffee-script":  "1.2.0",
+    "sugar":          "1.2.0",
+    "eco":            "1.1.0-rc-3",
+    "marked":         "~0.2.3",
+    "async":          "~0.1.18",
+    "redis":          "~0.7.1",
+    "connect-redis":  "~1.4.0",
+    "qs":             "~0.5.0",
+    "winston":        "~0.6.1",
+    "winston-loggly": "~0.6.0"
   },
   "devDependencies": {
     "uglify-js":     "1.2.5",
