--- a/config/default.config
+++ b/config/default.config
@@ -11,9 +11,9 @@ redis:
   port:       6379
 
 github:
-  client_id:     "YOUR GITHUB CLIENT ID"
-  client_secret: "YOUR GITHUB CLIENT SECRET"
+  client_id:     process.env.GITHUB_CLIENT_ID
+  client_secret: process.env.GITHUB_CLIENT_SECRET
 
 loggly:
-  subdomain: "YOUR LOGGLY SUBDOMAIN"
-  inputToken: "YOUR LOGGLY INPUT TOKEN"
+  subdomain:  process.env.LOGGLY_SUBDOMAIN
+  inputToken: process.env.LOGGLY_INPUT_TOKEN
