--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "coffee-script":  "1.2.0",
     "sugar":          "1.2.0",
     "eco":            "1.1.0-rc-3",
-    "marked":         "~0.2.3",
     "async":          "~0.1.18",
     "redis":          "~0.7.1",
     "connect-redis":  "~1.4.0",
     "qs":             "~0.5.0",
     "winston":        "~0.6.1",
-    "winston-loggly": "~0.6.0"
+    "winston-loggly": "~0.6.0",
+    "highlight.js":   "~7.0.1"
   },
   "devDependencies": {
     "uglify-js":     "1.2.5",
