Modify the package.json to not installing redis 0.7.3 because: https://github.com/mranney/node_redis/issues/285

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "sugar":          "1.2.0",
     "eco":            "1.1.0-rc-3",
     "async":          "~0.1.18",
-    "redis":          "~0.7.1",
+    "redis":          ">=0.7.1 <0.7.3",
     "connect-redis":  "~1.4.0",
     "qs":             "~0.5.0",
     "winston":        "~0.6.1",
