--- a/deploy.conf
+++ b/deploy.conf
@@ -1,7 +1,7 @@
 [production]
-user ubuntu
-host documentup.com
+user www
+host direct.documentup.com
 repo git@github.com:jeromegn/DocumentUp.git
-path /var/www/documentup.com
+path /home/www/documentup.com
 ref origin/master
 post-deploy ./scripts/post_deploy.sh
