--- a/package.json
+++ b/package.json
@@ -8,37 +8,35 @@
     "type": "git",
     "url": "git://github.com/jeromegn/documentup.git"
   },
-  "engines": {
-    "node": "~0.6.8"
-  },
   "scripts": {
     "start": "supervisor -w app/resources,app/models,lib,config,server.coffee server.coffee",
-    "test" : "mocha"
+    "test": "mocha"
   },
   "filename": "documentup.min.js",
   "dependencies": {
-    "express":        "2.5.1",
-    "stylus":         "~0.19.2",
-    "nib":            "~0.3.0",
-    "request":        "~2.9.153",
-    "coffee-script":  "1.2.0",
-    "sugar":          "1.2.0",
-    "eco":            "1.1.0-rc-3",
-    "async":          "~0.1.18",
-    "redis":          ">=0.7.1 <0.7.3",
-    "connect-redis":  "~1.4.0",
-    "qs":             "~0.5.0",
-    "winston":        "~0.6.1",
+    "express": "2.5.1",
+    "stylus": "~0.19.2",
+    "nib": "~0.3.0",
+    "request": "~2.9.153",
+    "coffee-script": "1.2.0",
+    "sugar": "1.2.0",
+    "eco": "1.1.0-rc-3",
+    "async": "~0.1.18",
+    "redis": ">=0.7.1 <0.7.3",
+    "connect-redis": "~1.4.0",
+    "qs": "~0.5.0",
+    "winston": "~0.6.1",
     "winston-loggly": "~0.6.0",
-    "highlight.js":   "~7.0.1"
+    "highlight.js": "~7.3.0",
+    "marked": "~0.2.9"
   },
   "devDependencies": {
-    "uglify-js":     "1.2.5",
-    "growl":         "~1.2.0",
-    "mocha":         "~1.0.0",
-    "chai":          "~1.1.0",
-    "replay":        "~1.7.0",
-    "zombie":        "~1.4.0",
-    "supervisor":    "~0.3.0"
+    "uglify-js": "1.2.5",
+    "growl": "~1.2.0",
+    "mocha": "~1.0.0",
+    "chai": "~1.1.0",
+    "replay": "~1.7.0",
+    "zombie": "~1.4.0",
+    "supervisor": "~0.3.0"
   }
 }
