--- a/config/production.config
+++ b/config/production.config
@@ -5,4 +5,4 @@ redis:
   port: process.env.REDIS_PORT
   hostname: process.env.REDIS_HOST
 server:
-  port: process.env.PORT
+  port: process.env.PORT || 5000
