--- a/config/production.config
+++ b/config/production.config
@@ -1,8 +1,10 @@
 #!coffee
 
+redis_url = require('url').parse(process.env.REDIS_URL)
+
 base_uri: "http://documentup.com"
 redis:
-  port: process.env.REDIS_PORT
-  hostname: process.env.REDIS_HOST
+  port: redis_url.port
+  hostname: redis_url.hostname
 server:
   port: process.env.PORT || 5000
