--- a/config/production.config
+++ b/config/production.config
@@ -1,10 +1,8 @@
 #!coffee
 
-redis_url = require('url').parse(process.env.REDIS_URL)
-
 base_uri: "http://documentup.com"
 redis:
-  port: redis_url.port
-  hostname: redis_url.hostname
+  port: require('url').parse(process.env.REDIS_URL).port
+  hostname: require('url').parse(process.env.REDIS_URL).hostname
 server:
   port: process.env.PORT || 5000
