updating node redis helps

--- a/config/production.config
+++ b/config/production.config
@@ -4,6 +4,6 @@ base_uri: "http://documentup.com"
 redis:
   port: require('url').parse(process.env.REDIS_URL).port
   hostname: require('url').parse(process.env.REDIS_URL).hostname
-  password: require('url').parse(process.env.REDIS_URL).auth.split(":")[1]
+  password: require('url').parse(process.env.REDIS_URL).auth?.split(":")[1]
 server:
   port: process.env.PORT || 5000
