--- a/package.json
+++ b/package.json
@@ -15,25 +15,32 @@
   },
   "filename": "documentup.min.js",
   "dependencies": {
-    "express": "2.5.1",
-    "stylus": "~0.19.2",
-    "nib": "~0.3.0",
-    "request": "~2.9.153",
-    "coffee-script": "1.2.0",
-    "sugar": "1.2.0",
-    "eco": "1.1.0-rc-3",
     "async": "~0.1.18",
-    "redis": "~0.12.1",
-    "connect-redis": "~1.4.0",
-    "qs": "~0.5.0",
-    "winston": "~0.6.1",
+    "body-parser": "^1.12.4",
+    "coffee-script": "1.9.3",
+    "connect-redis": "~2.3.0",
+    "cookie-parser": "^1.3.5",
+    "eco": "1.1.0-rc-3",
+    "ect": "^0.5.9",
+    "errorhandler": "^1.3.6",
+    "express": "~4.12.4",
+    "express-session": "^1.11.2",
     "highlight.js": "~7.3.0",
-    "marked": "~0.3.3"
+    "marked": "~0.3.3",
+    "nib": "~0.3.0",
+    "qs": "^0.5.6",
+    "redis": "~0.12.1",
+    "request": "~2.9.153",
+    "response-time": "^2.3.1",
+    "serve-static": "^1.9.3",
+    "stylus": "~0.19.2",
+    "sugar": "1.2.0",
+    "winston": "~0.6.1"
   },
   "devDependencies": {
     "uglify-js": "1.2.5",
     "growl": "~1.2.0",
-    "mocha": "~1.0.0",
+    "mocha": "~2.2.5",
     "chai": "~1.1.0",
     "replay": "~1.7.0",
     "zombie": "~1.4.0",
