hopeful fixes by reorganizing things

--- a/config/test.config
+++ b/config/test.config
@@ -7,3 +7,7 @@ redis:
   namespace:  "docup-test"
   hostname:   "localhost"
   port:       6379
+
+github:
+  client_id: "test"
+  client_secret: "test"
