--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "winston": "~0.6.1"
   },
   "devDependencies": {
-    "uglify-js": "1.2.5",
+    "chai": "^3.0.0",
     "growl": "~1.2.0",
     "mocha": "~2.2.5",
-    "chai": "~1.1.0",
     "replay": "~1.7.0",
-    "zombie": "~1.4.0",
-    "supervisor": "~0.3.0"
+    "supervisor": "~0.3.0",
+    "uglify-js": "1.2.5",
+    "zombie": "^3.1.1"
   }
 }
