--- a/config/production.config
+++ b/config/production.config
@@ -5,5 +5,6 @@ redis:
   port: require('url').parse(process.env.REDIS_URL).port
   hostname: require('url').parse(process.env.REDIS_URL).hostname
   password: require('url').parse(process.env.REDIS_URL).auth?.split(":")[1]
+  namespace: 'docup'
 server:
   port: process.env.PORT || 5000
