--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "express": "~4.12.4",
     "express-session": "^1.11.2",
     "highlight.js": "~7.3.0",
+    "markdown-toc": "^0.11.4",
     "marked": "~0.3.3",
     "nib": "~0.3.0",
     "qs": "^0.5.6",
     "redis": "~0.12.1",
+    "remarkable": "^1.6.0",
+    "remarkable-emoji": "^0.1.3",
     "request": "~2.9.153",
     "response-time": "^2.3.1",
     "serve-static": "^1.9.3",
