--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "scripts": {
     "start": "supervisor -w app/resources,app/models,lib,config,server.coffee server.coffee",
-    "test": "mocha",
-    "postinstall": "make public/stylesheets"
+    "test": "mocha"
   },
   "filename": "documentup.min.js",
   "dependencies": {
@@ -28,7 +27,9 @@
     "highlight.js": "~7.3.0",
     "markdown-toc": "^0.11.4",
     "marked": "~0.3.3",
-    "nib": "~0.3.0",
+    "nib": "^1.1.0",
+    "node-sass": "^3.1.2",
+    "node-sass-middleware": "^0.8.0",
     "qs": "^0.5.6",
     "redis": "~0.12.1",
     "remarkable": "^1.6.0",
@@ -36,7 +37,7 @@
     "request": "~2.9.153",
     "response-time": "^2.3.1",
     "serve-static": "^1.9.3",
-    "stylus": "~0.19.2",
+    "stylus": "^0.51.1",
     "sugar": "1.2.0",
     "winston": "~0.6.1"
   },
